src/test/ui/parser/lex-bad-char-literals-7.stderr
error: empty character literal
  --> $DIR/lex-bad-char-literals-7.rs:3:20
   |
LL |     let _: char = '';
   |                    ^

error: empty unicode escape (must have at least 1 hex digit)
  --> $DIR/lex-bad-char-literals-7.rs:5:20
   |
LL |     let _: char = '\u{}';
   |                    ^^^^

error: unterminated character literal
  --> $DIR/lex-bad-char-literals-7.rs:12:13
   |
LL |     let _ = ' hello // here's a comment
   |             ^^^^^^^^

error: aborting due to 3 previous errors

